volexc/tests/ui/mapkey_array_enum.go.out
Error: invalid map key type: arrays cannot be used as map keys in Go
    ╭─[mapkey_array_enum.vol:11:12]
    │
 11 │     data: {[Status]:string}
    │            ────┬───  
    │                ╰───── array type used here
────╯