volexc/tests/ui/mapkey_array_enum.vol
// rust:pass
// go:fail
// typescript:fail
// Arrays of enums as map keys: valid in Rust, invalid in Go/TS
enum Status {
    Active = 1
    Inactive = 2
}

struct Test {
    data: {[Status]:string}
}
